Correct nav visibility on tablet and desktop views.

--- a/sass/_navigation.scss
+++ b/sass/_navigation.scss
@@ -49,6 +49,9 @@ a {
 .main-navigation {
 	ul {
 	visibility: hidden;
+		@include tablet {
+			visibility: visible;
+		}
 	}
 	position: relative;
 	display: flex;
